RESOLVED FIXED 261992
REGRESSION (macOS Sonoma): Mouse clicks in Safari are sometimes vertically offset
https://bugs.webkit.org/show_bug.cgi?id=261992
Summary REGRESSION (macOS Sonoma): Mouse clicks in Safari are sometimes vertically of...
Simon Fraser (smfr)
Reported 2023-09-22 21:40:50 PDT
Sometimes we can get into a state where mouse events are offset from the content.
Attachments
Simon Fraser (smfr)
Comment 1 2023-09-22 21:41:00 PDT
Simon Fraser (smfr)
Comment 2 2023-09-22 21:53:32 PDT
EWS
Comment 3 2023-09-23 11:40:10 PDT
Committed 268363@main (0e58303d1704): <https://commits.webkit.org/268363@main> Reviewed commits have been landed. Closing PR #18117 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.